fixed spacing

--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -13,7 +13,6 @@
 .home-img {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
 }
 
 .headshot {
